# msaBase

./: .gitignore  LICENCE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.lh/msaBase/: configurate.py.json
docs/: gen_ref_pages.py  index.md  release-notes.md  saved_req_package_pip_info.pkl  usage.md
docs_src/home/: config.json  index_first.py
msaBase/: __init__.py  config.py  configurate.py  errorhandling.py  healthcheck.py  helpers.py  logger.py  profiler.py  router.py  sysinfo.py
msaBase/models/: config.py  functionality.py  middlewares.py  settings.py  sysinfo.py
msaBase/utils/: constants.py
scripts/: format.sh  lint.sh
